Add mailto link to 'upon request' (maj.v.des@gmail.com)
Made-with: Cursor

--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,15 @@ body {
   box-sizing: border-box;
 }
 
+.header-intro-link {
+  color: inherit;
+  text-decoration: underline;
+}
+
+.header-intro-link:hover {
+  color: #acd387;
+}
+
 @media (max-width: 768px) {
   .site-header-inner {
     flex-direction: column;
