--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ body {
   -webkit-font-smoothing: antialiased;
   overflow-x: clip;
   max-width: 100vw;
+  cursor: url("assets/cursor-pointer.cur"), url("assets/cursor-pointer.svg") 10 5, pointer;
 }
 
 .page {
